...
        <!--<variable
            name="viewModel"
            type="com.gonpas.wembleymoviesapp.ui.tabs.MoviesViewModel" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movieFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/reparto"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/casting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_overview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/casting"
            android:layout_width="0dp"
...
