...
    <string name="calificacion">Calificación TMDB: %s</string>
    <string name="fecha_estreno">Fecha estreno: %s/%s/%s</string>
    <string name="birthday">Fecha de nacimiento: %s/%s/%s</string>
    <string name="deathday">Fecha de defunción: %s/%s/%s</string>
    <string name="favorite">Añadir a favoritos</string>
    <string name="eliminar">¿Seguro de eliminar \'%s\' de favoritas?</string>
    <string name="confirmar">Confirmar</string>
    <string name="film_poster">Poster de la película</string>
    <string name="por_estrenar">Por estrenar</string>
    <string name="title_activity_intro">Intro Activity</string>
    <string name="busqueda">Buscar películas</string>
    <string name="sin_Resultados">No hay coincidencias</string>
    <string name="noMas">No hay más resultados</string>
...
    <string name="guion">Guion: %s</string>
    <string name="director_fotografia">Director de fotografía: %s</string>
    <string name="historia_original">Historia original: %s</string>

    <string name="reparto">Reparto</string>
    <string name="mas">Más …</string>
    <string name="biografia">Biografía …</string>
    <string name="msg_no_connection">Sin acceso a Internet</string>
    <string name="person_image">Fotografía del intérprete</string>
</resources>
