...
        android:layout_height="match_parent"
        tools:context=".ui.tabs.popular.PopularMoviesFragment">


        <!--android:visibility="@{ viewModel.noHayFavorites ? View.VISIBLE : View.GONE }"-->
        <TextView
            android:id="@+id/aviso_no_hay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_hay_favoritas"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold"
            android:visibility="@{ viewModel.noHayFavorites ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="@+id/list_fav_movies"
            app:layout_constraintEnd_toEndOf="@+id/list_fav_movies"
            app:layout_constraintStart_toStartOf="@+id/list_fav_movies"
            app:layout_constraintTop_toTopOf="@+id/list_fav_movies"
            app:layout_constraintVertical_bias="0.050000012" />

        <androidx.recyclerview.widget.RecyclerView
...
